prevent button text-wrap

--- a/scss/partials/_buttons.scss
+++ b/scss/partials/_buttons.scss
@@ -23,5 +23,6 @@ button {
 		font-size:0.75rem;
 		text-align:center;
 		padding:0 32px;
+		white-space:nowrap;
 	}
 }
